--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -13,13 +13,13 @@ dino, background {
 }
 
 background {
-	background-image: url(../pictures/background.jpg);
+	background-image: url(../pictures/backgroundImage.jpg);
     width:100%; height: 100%;
     background-size: cover;
 }
 
 dino {
-    background-image: url(../pictures/dinoSprite.jpg);
-    width: 21px; height: 21px;
+    background-image: url(../pictures/dinoSprite.png);
+    width: 90px; height: 120px;
     cursor: pointer;
 }
