--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 body {
-    background-color: #70CF51;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: #0b0630;
+    font-family: 'Press Start 2P', cursive ;
     overflow:hidden;
     margin:0px; padding:0px;
 }
@@ -9,12 +11,34 @@ player, rock, tree, astroid, background {
     position: absolute;
     display: block;
     box-sizing: border-box;
-    background-repeat: no-repeat;
 }
 
 background {
-	background-image: url(../pictures/backgroundImage.jpg);
-    width:100%; height: 100%;
+    z-index: -1;
+	background-image: url(../pictures/backgroundImage.png);
+    width:100%; 
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+}
+
+pause {
+    display: inline-block;
+    background-color: #0b0630;
+    border-radius: 10px;
+    border: 4px solid #f8e3c4;
+    color: #f8e3c4;
+    text-align: center;
+    font-size: 14px;
+    padding: 10px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
+
+pause:hover {
+    background-color: #6b1fb1;
 }
 
 player {
