--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -7,6 +7,42 @@ body {
     margin:0px; padding:0px;
 }
 
+gametitle {
+    color: white;
+    font-size: 2em;
+    z-index: 999;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+header {
+    height: 8vh;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center; 
+    display: flex;
+}
+
+score {
+    color: white;
+    z-index: 999;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+gameOverScreen {
+    color: white;
+    z-index: 999;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 4em;
+}
+
 player, rock, tree, astroid, background {
     position: absolute;
     display: block;
@@ -16,14 +52,18 @@ player, rock, tree, astroid, background {
 background {
     z-index: -1;
 	background-image: url(../pictures/backgroundImage.png);
-    width:100%; 
+    background-size: 100% 100%;
+    width: 100%;
     height: 100%;
-    background-size: cover;
     background-position: center;
+    background-repeat: repeat;
 }
 
 pause {
-    display: inline-block;
+    z-index: 999;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
     background-color: #0b0630;
     border-radius: 10px;
     border: 4px solid #f8e3c4;
@@ -32,6 +72,24 @@ pause {
     font-size: 14px;
     padding: 10px;
     width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
+
+resetButton {
+    z-index: 999;
+    position: absolute;
+    top: 20%;
+    left: 30%;
+    text-align: center;
+    background-color: #0b0630;
+    border-radius: 10px;
+    border: 4px solid #f8e3c4;
+    color: #f8e3c4;
+    text-align: center;
+    font-size: 3em;
+    padding: 10px;
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
@@ -47,6 +105,26 @@ player {
     cursor: pointer;
 }
 
+.right {
+    background-image: url(../pictures/dinoSprite.png);
+    width: 42px; height: 42px;
+}
+
+.left {
+    background-image: url(../pictures/dinoSpriteLeft.png);
+    width: 42px; height: 42px;
+}
+
+.jumpingLeft {
+    background-image: url(../pictures/dinoJumpLeft.png);
+    width: 42px; height: 42px;
+}
+
+.jumpingRight {
+    background-image: url(../pictures/dinoJumpRight.png);
+    width: 42px; height: 42px;
+}
+
 rock {
     background-image: url(../pictures/spaceRock.png);
     width: 42px; height: 42px;
@@ -58,6 +136,7 @@ tree {
     width: 168px; height: 168px;
     background-size: 50%;
     cursor: pointer;
+    background-repeat: no-repeat;
 }
 
 astroid {
